--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
           </td>
           <td class="price">$<span>25.00</span></td>
           <td class="quantity">
-            <input type="number" value="0" min="0" placeholder="Quantity" />
+            <input
+              id="quantity"
+              type="number"
+              value="0"
+              min="0"
+              placeholder="Quantity"
+            />
           </td>
           <td class="subtotal">$<span>0</span></td>
           <td class="action">
             <button class="btn btn-remove">Remove</button>
           </td>
         </tr>
+
         <!-- Iteration 2: Add more products here -->
       </tbody>
       <tfoot>
@@ -53,7 +60,7 @@
     <p class="calculate-total">
       <button id="calculate" class="btn btn-success">Calculate Prices</button>
     </p>
-    <h2 id="total-value">Total: $<span>0</span></h2>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <h2 id="total-value">Total: $<span id="Subtotal">0</span></h2>
+    <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
