--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <td class="name">
             <span>Ironhack Rubber Duck</span>
           </td>
-          <td class="price">$<span>25.00</span></td>
+          <td class="price">$<span class="valor">25.00</span></td>
           <td class="quantity">
             <input
               id="quantity"
@@ -40,6 +40,45 @@
         </tr>
 
         <!-- Iteration 2: Add more products here -->
+        <tr class="product">
+          <td class="name">
+            <span>Ironhack Hat</span>
+          </td>
+          <td class="price">$<span class="valor">30.00</span></td>
+          <td class="quantity">
+            <input
+              id="quantity"
+              type="number"
+              value="0"
+              min="0"
+              placeholder="Quantity"
+            />
+          </td>
+          <td class="subtotal">$<span>0</span></td>
+          <td class="action">
+            <button class="btn btn-remove">Remove</button>
+          </td>
+        </tr>
+
+        <tr class="product">
+          <td class="name">
+            <span>Ironhack Shoes</span>
+          </td>
+          <td class="price">$<span class="valor">60.00</span></td>
+          <td class="quantity">
+            <input
+              id="quantity"
+              type="number"
+              value="0"
+              min="0"
+              placeholder="Quantity"
+            />
+          </td>
+          <td class="subtotal">$<span>0</span></td>
+          <td class="action">
+            <button class="btn btn-remove">Remove</button>
+          </td>
+        </tr>
       </tbody>
       <tfoot>
         <!-- <tr class="create-product">
