--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <th>Action</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="produtos">
         <tr class="product">
           <td class="name">
             <span>Ironhack Rubber Duck</span>
@@ -39,7 +39,6 @@
           </td>
         </tr>
 
-        <!-- Iteration 2: Add more products here -->
         <tr class="product">
           <td class="name">
             <span>Ironhack Hat</span>
@@ -83,10 +82,11 @@
       <tfoot>
         <tr class="create-product">
           <td>
-            <input type="text" placeholder="Product Name" />
+            <input id="productName" type="text" placeholder="Product Name" />
           </td>
           <td>
             <input
+              id="setPrice"
               type="number"
               min="0"
               value="0"
